Migrate to Google Jib #82